# avro-schema

./: .gitignore  README.md  pyproject.toml
avro_schema/: convertor.py
tests/: test_avro_schema.py  test_convertor.py
