[tool.poetry]
name = "avro-schema"
version = "0.1.0"
description = ""
authors = ["Sam <sam.mosleh@ut.ac.ir>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sam-mosleh/avro-schema"
keywords = ["Apache Avro", "Avro Schema", "Json Schema"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastavro = "^0.23.3"
pydantic = "^1.5.1"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
